6thstep commit